test/end-to-end/compile-errors/expected-type-param.crow
main void()
	"x"::string foo
	"x"::string bar 0::nat64

foo[t] void(a t)
	a bar 0

bar[t] void(a t, b t)
	()
